# llm-latent-space-eng

./: .gitignore  README.md  embedding_utils.py  experiment.ipynb  pyproject.toml  venv-kernel-setup.md
setup/: download_model.py
