[project]
name = "llm-latent-space"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "transformers",
  "huggingface_hub",
  "accelerate",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
  "jupyter",
  "ipykernel>=7.1.0",
  "scikit-learn>=1.7.2",
  "ipympl>=0.9.8",
]
